Salvataggio versione Fidelity Software V0.1

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sapori & Colori - Gestione Fidelity</title>
+</head>
+<body>
+  <div id="root"></div>
+  <!-- TinyMCE -->
+<script src="https://cdn.tiny.cloud/1/ymwhgj7gy5aqdcy80sa7pwktnhwuofwg3tijfnlsl0k9uuev/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
