feat: Sezione premi con immagini funzionante

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sapori & Colori - Gestione Fidelity</title>
 </head>
+
 <body>
   <div id="root"></div>
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
   <!-- TinyMCE -->
-<script src="https://cdn.tiny.cloud/1/ymwhgj7gy5aqdcy80sa7pwktnhwuofwg3tijfnlsl0k9uuev/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+  <script src="https://cdn.tiny.cloud/1/ymwhgj7gy5aqdcy80sa7pwktnhwuofwg3tijfnlsl0k9uuev/tinymce/6/tinymce.min.js"
+    referrerpolicy="origin"></script>
 
   <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
